--- a/example/src/main/resources/application.properties
+++ b/example/src/main/resources/application.properties
@@ -19,5 +19,20 @@ gigachat.authorizationKey=${GIGACHAT_AUTH_KEY}
 gigachat.scope=GIGACHAT_API_PERS
 #gigachat.url.base=https://gigachat.devices.sberbank.ru
 
-logging.group.mycustomgroup=ru.deevdenis.spring_boot_starter_gigachat
+
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=denis
+spring.datasource.password=password
+spring.datasource.hikari.maximum-pool-size=6
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.idle-timeout=600000
+spring.datasource.hikari.max-lifetime=1800000
+spring.jpa.hibernate.ddl-auto=none
+
+logging.group.mycustomgroup=ru.deevdenis.spring_ai_starter_gigachat
 logging.level.mycustomgroup=DEBUG
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
